--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
-* {
+body {
   box-sizing: border-box;
 }
-
 #result {
-  width: 180px;
+  width: 162px;
   height: 50px;
   margin: 5px;
   text-align: right;
 }
 #operator {
-  width: 100px;
+  width: 50px;
   height: 50px;
   margin: 5px;
   text-align: center;
